# PingPong

./: .clocignore  .gitattributes  .gitignore  .gitignore.txt  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
.cmake/api/v1/reply/: cache-v2-3f384e52d7ad799765a7.json  cmakeFiles-v1-dad31c7e44f990438e87.json  codemodel-v2-b6fc209ff43f167771a9.json  index-2026-05-07T18-44-52-0540.json  target-client-Debug-e5a7ed4f4aab6165a8b0.json
client/src/: client_main.cpp
client/src/game/: game.cpp  game.h  players.cpp  players.h  scene.cpp  scene.h  style.h
core/engine/default/: def_raylib.cpp  def_raylib.h
core/engine/include/: base.h  camera.h  codes.h  engine.h  entity.h  graphics.h  renderer.h  shared.h  transform.h  ui.h  window.h
core/engine/src/: camera.cpp  engine.cpp  renderer.cpp  ui.cpp
core/libs/raylib/include/: raymath.h
